customer-order-service/order-service/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orders-service
  name: orders-service
spec:
  type: ClusterIP
  ports:
  - name: http-orders
    port: 80
    protocol: TCP
    targetPort: 9001
  selector:
    app: orders
