customer-order-service/order-service/orders-destinationRules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: orders-destination-rule
spec:
  host: orders-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 30s
      baseEjectionTime: 60s
      maxEjectionPercent: 100
      minHealthPercent: 0
