customer-order-service/order-service/orders-virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: orders-service
  labels:
    service: orders-service
spec:
  http:
    - route:
        - destination:
            host: orders-service
          weight: 100
      fault:
        abort:
          percentage:
            value: 100
          httpStatus: 401
  hosts:
    - orders-service
